--- a/Artywiz/etape-6.html
+++ b/Artywiz/etape-6.html
@@ -51,7 +51,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597903336/covid/main-bg.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598944362/etape%20-6/header.png"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -112,9 +112,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <p align="center" style="margin-top: 26px;">Communiquez autour <br>
-                                                    des mesures sanitaires <br>
-                                                    de votre club!</p>
+                                                <p align="center" style="margin-top: 26px;">Annoncez les matchs <br>
+                                                    de toutes vos équipes, <br>
+                                                    et valorisez vos sponsors!</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -126,7 +126,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size: 18px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <p align="center" style="margin: 0;">C’est simple, rapide et gratuit!</p>
+                                                <p align="center" style="margin: 0;">C’est simple, rapide et gratuit…</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -164,13 +164,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
                                                 <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
-                                                    Sécurisez le redémarrage des activités sportives
+                                                    Réalisez des annonces de matchs professionnelles
                                                 </p>
                                                 <p align="left">
-                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables, que vous pourrez télécharger et communiquer par tous les moyens au sein de votre club : Affichage, emails, bannière web, publication pour les réseaux sociaux... 
-                                                    <br><br>
-                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter ou le lavage des mains, réalisez l’ensemble des documents indispensables, à l’image de votre club et en quelques minutes chrono! <br>
-                                                    Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez également valoriser vos sponsors…
+                                                    Chaque semaine avec ARTYWIZ football, réalisez tous les supports de communication nécessaires pour annoncer les matchs de vos équipe, affiches à exposer dans les commerces partenaires, publication pour les réseaux sociaux, email à envoyer à votre communauté… Et profitez-en pour apporter de la visibilité à vos sponsors!
                                                 </p>
                                             </multi>
                                         </td>
@@ -204,8 +201,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" bgcolor="#EB7F8E" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597903509/covid/masque.png" alt="icon"
+                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1599030232/etape%20-6/publication.png" alt="icon"
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -219,7 +216,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:18px; line-height: 23px; color:#3E586B; font-weight:bold;">
-                                            <single label="title">Masque obligatoire</single>
+                                            <single label="title">Publication réseaux sociaux</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -252,7 +249,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597830442/covid/lavage.png" alt="img" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598944362/etape%20-6/affichage.png" alt="img" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -264,7 +261,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:18px; line-height: 23px; color:#3E586B;font-weight:bold;">
-                                            <single label="title">Lavage des mains</single>
+                                            <single label="title">Affichage</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -286,7 +283,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597830442/covid/acces.png" alt="img" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598944361/etape%20-6/acces.png" alt="img" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -298,7 +295,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:18px; line-height: 23px; color:#3E586B;font-weight:bold;">
-                                            <single label="title">Accès et désinfection</single>
+                                            <single label="title">Emailing</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -504,6 +501,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
     </module>
     <!--end philippe-section-->
 
+    @if($props['password'] != null)
     <!--password-->
     <module label="password" auto>
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -637,6 +635,70 @@ u + .body .full { width:100% !important; width:100vw !important;}
     </module>
     <!--end password-->
 
+    @else
+
+    <!--No Password-->
+    <module label="footer" auto>
+        <table class="full" align="center" bgcolor="#13243E" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center" bgcolor="#13243E">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td height="50"></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <!-- middle -->
+                                <table class="table-full" align="center" border="0" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--icon-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598946703/etape%20-6/label-password.png" alt="icon"
+                                                width="95"
+                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
+                                                editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end icon-->
+                                    <tr>
+                                        <td height="17"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family:Open sans, Arial, Sans-serif; font-weight: bold; text-transform: uppercase; font-size:20px; line-height: 25px; color:#1F8EFA;">
+                                            <single label="title">ARTYWIZ football est entièrement gratuit <br> pour les clubs de la LGEF!</single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family:Open sans, Arial, Sans-serif; font-weight: 500; font-size: 13px; line-height: 20px; color:#FFFFFF;">
+                                            <single label="title">Les codes d’accès de votre club ont été envoyés à l’adresse email officielle LGEF de celui-ci, <br>
+                                                vous pouvez également créer gratuitement un compte personnel sur artywiz.io/se-connecter </single>
+                                        </td>
+                                    </tr>
+                                </table>
+                                <!-- end middle -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="40"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end No Passowrd-->
+
+    @endif
+
     <module label="CTA" auto>
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
@@ -664,7 +726,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#4A4A4A;">
                                             <single label="title">ARTYWIZ football est l’agence virtuelle de communication des clubs. <br>
-                                                En quelques clics, les clubs peuvent créer eux-mêmes toute leur communication, gratuitement et en toute simplicité!</single>
+                                                En quelques clics, les clubs peuvent créer eux-mêmes toute leur communication, gratuitement et en toute simplicité :</single>
                                         </td>
                                     </tr>
                                     <tr>
@@ -1060,15 +1122,15 @@ u + .body .full { width:100% !important; width:100vw !important;}
                         <tr>
                             <td>
                                 <!--left-->
-                                <table width="275" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="160" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <a href="https://www.adetem.org/" target="_blank">
+                                            <a href="https://lgef.fff.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="img" width="275"
-                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:85px;"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582253821/etape-1/lgef-footer.png" alt="img" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:60px;"
                                                     editable label="image" />
                                             </a>
                                         </td>
@@ -1077,21 +1139,45 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="25" align="left" border="0" cellpadding="0" cellspacing="0">
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td height="25"></td>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--middle-->
+                                <table width="160" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;">
+                                            <a href="https://www.adetem.org/" target="_blank">
+                                                <img
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596610566/covid/adetem-sponsor.png" alt="img" width="160"
+                                                    style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
+                                                    editable label="image" />
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <!--end img-->
+                                </table>
+                                <!--end middle-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="20" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
                                     </tr>
                                 </table>
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
                                 <!--right-->
-                                <table width="275" class="table-full" border="0" align="left" cellpadding="0"
+                                <table width="160" class="table-full" border="0" align="left" cellpadding="0"
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
                                             <a href="https://www.groupama.fr/" target="_blank">
                                                 <img
-                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="img" width="275"
+                                                    src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596609866/covid/sponsor-groupama.png" alt="img" width="160"
                                                     style="display:block; line-height:0px; font-size:0px; border:0px; width:77px;"
                                                     editable label="image" />
                                             </a>
