--- a/Artywiz/etape-6.html
+++ b/Artywiz/etape-6.html
@@ -113,7 +113,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
                                                 <p align="center" style="margin-top: 26px;">Annoncez les matchs <br>
-                                                    de toutes vos équipes, <br>
+                                                    des équipes de votre club <br>
                                                     et valorisez vos sponsors!</p>
                                             </multi>
                                         </td>
@@ -164,7 +164,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
                                                 <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
-                                                    Réalisez des annonces de matchs professionnelles
+                                                    Réalisez vous-mêmes vos annonces de matchs
                                                 </p>
                                                 <p align="left">
                                                     Chaque semaine avec ARTYWIZ football, réalisez tous les supports de communication nécessaires pour annoncer les matchs de vos équipe, affiches à exposer dans les commerces partenaires, publication pour les réseaux sociaux, email à envoyer à votre communauté… Et profitez-en pour apporter de la visibilité à vos sponsors!
@@ -679,8 +679,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-weight: 500; font-size: 13px; line-height: 20px; color:#FFFFFF;">
-                                            <single label="title">Les codes d’accès de votre club ont été envoyés à l’adresse email officielle LGEF de celui-ci, <br>
-                                                vous pouvez également créer gratuitement un compte personnel sur artywiz.io/se-connecter </single>
+                                            <single label="title">Les codes d’accès de votre club ont été envoyés à l’adresse email officielle LGEF de celui-ci.</single>
                                         </td>
                                     </tr>
                                 </table>
