Remove alt value
Remove alt value

--- a/Artywiz/etape-6.html
+++ b/Artywiz/etape-6.html
@@ -1,3 +1,4 @@
+<!-- Email object : Annoncez vos matchs de coupes ou championnat avec Artywiz et la LGEF !-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -71,7 +72,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         <a href="https://artywiz.io/" target="_blank">
                                                             <img
                                                                 src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1596597845/covid/logo.png"
-                                                                alt="Logo"
+                                                                alt=""
                                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                                 editable label="image" />
                                                         </a>
@@ -95,7 +96,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                                         <a href="https://lgef.fff.fr/" target="_blank">
                                                             <img
                                                                 src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597228186/covid/lgef-logo.png"
-                                                                alt="Logo"
+                                                                alt=""
                                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                                 editable label="image" />
                                                         </a>
@@ -343,7 +344,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele #6</single>
+                                            <single label="title">Championnat 1</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -377,7 +378,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele elemental</single>
+                                            <single label="title">Championnat 2</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -425,7 +426,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele shaped</single>
+                                            <single label="title">Championnat 3</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -459,7 +460,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele shaped image</single>
+                                            <single label="title">Championnat 4</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -507,7 +508,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele #2</single>
+                                            <single label="title">Championnat 5</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -541,7 +542,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Modele #7</single>
+                                            <single label="title">Championnat 6</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -576,7 +577,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                 <table width="165" height="190" class="table-full" border="0" align="left" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td width="100%" align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597250150/covid/foot-icon.png" alt="img" width="165"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597250150/covid/foot-icon.png" alt="" width="165"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:165px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -692,7 +693,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597131475/covid/philippe.png" alt="img" width="275"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597131475/covid/philippe.png" alt="" width="275"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:250px"
                                                 editable label="image" /></td>
                                     </tr>
@@ -868,7 +869,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598946703/etape%20-6/label-password.png" alt="icon"
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1598946703/etape%20-6/label-password.png" alt=""
                                                 width="95"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -967,7 +968,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/internet-icon.png" alt="icon"
+                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/internet-icon.png" alt=""
                                                 width="106"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" /></td>
@@ -998,7 +999,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/affichage-icon.png" alt="icon"
+                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/affichage-icon.png" alt=""
                                                 width="64"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" /></td>
@@ -1029,7 +1030,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/vetements-icon.png" alt="icon"
+                                        <td align="center" style="line-height:0px;"><img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597127533/covid/vetements-icon.png" alt=""
                                                 width="91"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" /></td>
@@ -1099,7 +1100,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251069/covid/animez.png" alt="img" width="70"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251069/covid/animez.png" alt="" width="70"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:70px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1133,7 +1134,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597213737/covid/annoncez.png" alt="img" width="57"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597213737/covid/annoncez.png" alt="" width="57"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:57px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1167,7 +1168,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251177/covid/communiquez.png" alt="img" width="65"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251177/covid/communiquez.png" alt="" width="65"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:65px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1201,7 +1202,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251464/covid/preparer.png" alt="img" width="63"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251464/covid/preparer.png" alt="" width="63"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:63px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1235,7 +1236,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251692/covid/mesures.png" alt="img" width="73"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251692/covid/mesures.png" alt="" width="73"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:73px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1269,7 +1270,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251766/covid/organiser.png" alt="img" width="55"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597251766/covid/organiser.png" alt="" width="55"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:55px;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -1429,7 +1430,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center" style="line-height:0px;">
                                             <a href="https://artywiz.io/" target="_blank">
-                                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597213291/covid/logo-footer-white.png" alt="icon"
+                                                <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1597213291/covid/logo-footer-white.png" alt=""
                                                     width="95"
                                                     style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                     editable label="image" />
