--- a/Artywiz/feminine.html
+++ b/Artywiz/feminine.html
@@ -1,4 +1,4 @@
-<!-- Email object : Annoncez vos matchs de coupes ou championnats avec Artywiz et la LGEF !-->
+<!-- Email object : Développez le foot féminin avec la LGEF et Artywiz !-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -52,8 +52,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600177091/etape%20-6/header_annonce_email.png"
-                    style="background-size:cover; background-position:center;">
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600150378/Feminine/header_email_feminine-min.png"
+                    style="background-size: cover; background-position: right;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td width="600" align="center">
@@ -113,24 +113,12 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
-                                                <p align="center" style="margin-top: 26px;">Annoncez les matchs <br>
-                                                    des équipes de votre club <br>
-                                                    et valorisez vos sponsors!</p>
+                                                <p align="center" style="margin-top: 26px;">Développez votre <br>
+                                                    section foot féminin</p>
                                             </multi>
                                         </td>
                                     </tr>
                                     <!--end headline-->
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                    <tr>
-                                        <td
-                                            style="font-family:Century gothic, Arial, Sans-serif; font-size: 18px; color:#FFFFFF;font-weight: bold;">
-                                            <multi label="headline">
-                                                <p align="center" style="margin: 0;">C’est simple, rapide et gratuit…</p>
-                                            </multi>
-                                        </td>
-                                    </tr>
                                     <tr>
                                         <td height="50"></td>
                                     </tr>
@@ -165,10 +153,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
                                                 <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
-                                                    Réalisez vous-mêmes vos annonces de matchs
+                                                    Le foot féminin est à l’honneur en ce mois de septembre!
                                                 </p>
                                                 <p align="left">
-                                                    Chaque semaine avec ARTYWIZ football, réalisez tous les supports de communication nécessaires pour annoncer les matchs de vos équipe, affiches à exposer dans les commerces partenaires, publication pour les réseaux sociaux, email à envoyer à votre communauté… Et profitez-en pour apporter de la visibilité à vos sponsors!
+                                                    Organisez vos portes ouvertes et réunions d’information grâce à Artywiz, qui vous permet de personnaliser l’affiche officielle du mois du foot féminin, organisé par la ligue de Grand Est de football.
                                                 </p>
                                             </multi>
                                         </td>
@@ -203,7 +191,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1599030232/etape%20-6/publication.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600139664/Feminine/Affiches.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -217,7 +205,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
-                                            <single label="title">Coupe de France</single>
+                                            <single label="title">Affiches</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -250,7 +238,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178925/etape%20-6/Coupe_du_grand_est.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600139669/Feminine/Emailing.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -262,7 +250,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe du grand est</single>
+                                            <single label="title">Emailings</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -284,7 +272,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179033/etape%20-6/Coupe_gambardella2.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600139667/Feminine/FB_post.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -296,7 +284,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe gambardella</single>
+                                            <single label="title">Publications Facebook</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -319,9 +307,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
 
     <!--1/1 icons-->
     <module label="1/1 icons" auto>
-        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+        <table class="full" align="center" bgcolor="#FFFFFF width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
-                <td align="center" bgcolor="#F7F7F7">
+                <td align="center" bgcolor="#FFFFFF">
                     <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
                         cellpadding="0" cellspacing="0">
                         <tr>
@@ -331,8 +319,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--icon-->
                                     <tr>
-                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178915/etape%20-6/Championnat.jpg" alt=""
+                                        <td align="center" bgcolor="#FFFFFF" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600139659/Feminine/Web_Banner.png" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -346,7 +334,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
-                                            <single label="title">Championnat</single>
+                                            <single label="title">Bannières web</single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -355,7 +343,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                             </td>
                         </tr>
                         <tr>
-                            <td height="16"></td>
+                            <td height="50"></td>
                         </tr>
                     </table>
                 </td>
@@ -363,88 +351,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
         </table>
     </module>
     <!--end 1/1 icons-->
-
-    <!--2/2 panel-->
-    <module label="2/2 Panel" auto>
-        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-                <td align="center">
-                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
-                        cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>
-                                <!--left-->
-                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179095/etape%20-6/coupe_de_feminin_fb_post.jpg" alt="" width="183"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="6"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe de Feminin</single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end left-->
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <!--right-->
-                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179094/etape%20-6/futsal_newsletter.jpg" alt="" width="183"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="6"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Futsal</single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end right-->
-                            </td>
-                        </tr>
-                        <tr>
-                            <td height="16"></td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </module>
-    <!--end 2/2 panel-->
 
     <module label="CTA" auto>
         <table class="full" align="center" bgcolor="#FFFFFF" width="100%" border="0" cellspacing="0" cellpadding="0">
